// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate development k8s manifests 1`] = `
"---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
    app.github.com/job: '5678'
    app.github.com/ref: refs/heads/mybranch
    app.github.com/repo: socialgouv/nos1000jours-landing
    app.github.com/run: '1234'
    app.github.com/sha: '0123456'
  labels:
    app: les1000jours-landing
    application: nos1000jours-landing
    component: nginx
    owner: nos1000jours-landing
    team: nos1000jours-landing
    cert: wildcard
  name: les1000jours-landing
  namespace: nos1000jours-landing-mybranch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: les1000jours-landing
  template:
    metadata:
      annotations:
        kapp.k14s.io/disable-default-ownership-label-rules: ''
        kapp.k14s.io/disable-default-label-scoping-rules: ''
        app.github.com/job: '5678'
        app.github.com/ref: refs/heads/mybranch
        app.github.com/repo: socialgouv/nos1000jours-landing
        app.github.com/run: '1234'
        app.github.com/sha: '0123456'
      labels:
        app: les1000jours-landing
        application: nos1000jours-landing
        component: nginx
        owner: nos1000jours-landing
        team: nos1000jours-landing
        cert: wildcard
    spec:
      containers:
        - image: >-
            ghcr.io/socialgouv/nos1000jours/les1000jours-landing:sha-0123456789abcdefghijklmnopqrstuvwxyz0123
          livenessProbe:
            failureThreshold: 6
            httpGet:
              path: /index.html
              port: http
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 5
          name: les1000jours-landing
          ports:
            - containerPort: 80
              name: http
          readinessProbe:
            failureThreshold: 15
            httpGet:
              path: /index.html
              port: http
            initialDelaySeconds: 0
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
            requests:
              cpu: 5m
              memory: 32Mi
          startupProbe:
            failureThreshold: 12
            httpGet:
              path: /index.html
              port: http
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: les1000jours-landing
    application: nos1000jours-landing
    component: nginx
    owner: nos1000jours-landing
    team: nos1000jours-landing
    cert: wildcard
  name: les1000jours-landing
  annotations:
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
    app.github.com/job: '5678'
    app.github.com/ref: refs/heads/mybranch
    app.github.com/repo: socialgouv/nos1000jours-landing
    app.github.com/run: '1234'
    app.github.com/sha: '0123456'
  namespace: nos1000jours-landing-mybranch
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: les1000jours-landing
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
    app.github.com/job: '5678'
    app.github.com/ref: refs/heads/mybranch
    app.github.com/repo: socialgouv/nos1000jours-landing
    app.github.com/run: '1234'
    app.github.com/sha: '0123456'
  labels:
    app: les1000jours-landing
    application: nos1000jours-landing
    component: nginx
    owner: nos1000jours-landing
    team: nos1000jours-landing
    cert: wildcard
  name: les1000jours-landing
  namespace: nos1000jours-landing-mybranch
spec:
  rules:
    - host: nos1000jours-landing-mybranch.dev.fabrique.social.gouv.fr
      http:
        paths:
          - backend:
              service:
                name: les1000jours-landing
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - nos1000jours-landing-mybranch.dev.fabrique.social.gouv.fr
      secretName: wildcard-crt
"
`;

exports[`generate preproduction k8s manifests 1`] = `
"---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
    app.github.com/job: '5678'
    app.github.com/ref: refs/tags/v1.3.22
    app.github.com/repo: socialgouv/nos1000jours-landing
    app.github.com/run: '1234'
    app.github.com/sha: '0123456'
  labels:
    app: les1000jours-landing
    application: nos1000jours-landing
    component: nginx
    owner: nos1000jours-landing
    team: nos1000jours-landing
    cert: wildcard
  name: les1000jours-landing
  namespace: nos1000jours-landing-preprod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: les1000jours-landing
  template:
    metadata:
      annotations:
        kapp.k14s.io/disable-default-ownership-label-rules: ''
        kapp.k14s.io/disable-default-label-scoping-rules: ''
        app.github.com/job: '5678'
        app.github.com/ref: refs/tags/v1.3.22
        app.github.com/repo: socialgouv/nos1000jours-landing
        app.github.com/run: '1234'
        app.github.com/sha: '0123456'
      labels:
        app: les1000jours-landing
        application: nos1000jours-landing
        component: nginx
        owner: nos1000jours-landing
        team: nos1000jours-landing
        cert: wildcard
    spec:
      containers:
        - image: ghcr.io/socialgouv/nos1000jours/les1000jours-landing:1.3.22
          livenessProbe:
            failureThreshold: 6
            httpGet:
              path: /index.html
              port: http
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 5
          name: les1000jours-landing
          ports:
            - containerPort: 80
              name: http
          readinessProbe:
            failureThreshold: 15
            httpGet:
              path: /index.html
              port: http
            initialDelaySeconds: 0
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
            requests:
              cpu: 5m
              memory: 32Mi
          startupProbe:
            failureThreshold: 12
            httpGet:
              path: /index.html
              port: http
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: les1000jours-landing
    application: nos1000jours-landing
    component: nginx
    owner: nos1000jours-landing
    team: nos1000jours-landing
    cert: wildcard
  name: les1000jours-landing
  annotations:
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
    app.github.com/job: '5678'
    app.github.com/ref: refs/tags/v1.3.22
    app.github.com/repo: socialgouv/nos1000jours-landing
    app.github.com/run: '1234'
    app.github.com/sha: '0123456'
  namespace: nos1000jours-landing-preprod
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: les1000jours-landing
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
    app.github.com/job: '5678'
    app.github.com/ref: refs/tags/v1.3.22
    app.github.com/repo: socialgouv/nos1000jours-landing
    app.github.com/run: '1234'
    app.github.com/sha: '0123456'
  labels:
    app: les1000jours-landing
    application: nos1000jours-landing
    component: nginx
    owner: nos1000jours-landing
    team: nos1000jours-landing
    cert: wildcard
  name: les1000jours-landing
  namespace: nos1000jours-landing-preprod
spec:
  rules:
    - host: nos1000jours-landing-preprod.dev.fabrique.social.gouv.fr
      http:
        paths:
          - backend:
              service:
                name: les1000jours-landing
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - nos1000jours-landing-preprod.dev.fabrique.social.gouv.fr
      secretName: wildcard-crt
"
`;

exports[`generate production k8s manifests 1`] = `
"---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
    app.github.com/job: '5678'
    app.github.com/ref: refs/tags/v1.3.22
    app.github.com/repo: socialgouv/nos1000jours-landing
    app.github.com/run: '1234'
    app.github.com/sha: '0123456'
  labels:
    app: les1000jours-landing
    application: nos1000jours-landing
    component: nginx
    owner: nos1000jours-landing
    team: nos1000jours-landing
  name: les1000jours-landing
  namespace: les1000jours-landing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: les1000jours-landing
  template:
    metadata:
      annotations:
        kapp.k14s.io/disable-default-ownership-label-rules: ''
        kapp.k14s.io/disable-default-label-scoping-rules: ''
        app.github.com/job: '5678'
        app.github.com/ref: refs/tags/v1.3.22
        app.github.com/repo: socialgouv/nos1000jours-landing
        app.github.com/run: '1234'
        app.github.com/sha: '0123456'
      labels:
        app: les1000jours-landing
        application: nos1000jours-landing
        component: nginx
        owner: nos1000jours-landing
        team: nos1000jours-landing
    spec:
      containers:
        - image: ghcr.io/socialgouv/nos1000jours/les1000jours-landing:1.3.22
          livenessProbe:
            failureThreshold: 6
            httpGet:
              path: /index.html
              port: http
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 5
          name: les1000jours-landing
          ports:
            - containerPort: 80
              name: http
          readinessProbe:
            failureThreshold: 15
            httpGet:
              path: /index.html
              port: http
            initialDelaySeconds: 0
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
            requests:
              cpu: 5m
              memory: 32Mi
          startupProbe:
            failureThreshold: 12
            httpGet:
              path: /index.html
              port: http
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: les1000jours-landing
    application: nos1000jours-landing
    component: nginx
    owner: nos1000jours-landing
    team: nos1000jours-landing
  name: les1000jours-landing
  annotations:
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
    app.github.com/job: '5678'
    app.github.com/ref: refs/tags/v1.3.22
    app.github.com/repo: socialgouv/nos1000jours-landing
    app.github.com/run: '1234'
    app.github.com/sha: '0123456'
  namespace: les1000jours-landing
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: les1000jours-landing
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: 'true'
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
    app.github.com/job: '5678'
    app.github.com/ref: refs/tags/v1.3.22
    app.github.com/repo: socialgouv/nos1000jours-landing
    app.github.com/run: '1234'
    app.github.com/sha: '0123456'
  labels:
    app: les1000jours-landing
    application: nos1000jours-landing
    component: nginx
    owner: nos1000jours-landing
    team: nos1000jours-landing
  name: les1000jours-landing
  namespace: les1000jours-landing
spec:
  rules:
    - host: 1000jours.fabrique.social.gouv.fr
      http:
        paths:
          - backend:
              service:
                name: les1000jours-landing
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - 1000jours.fabrique.social.gouv.fr
      secretName: les1000jours-landing-crt
"
`;
